Bug 327086 - When disabling kwallet in system settings while kwalletmanager is running the latter gets disfunctional
Summary: When disabling kwallet in system settings while kwalletmanager is running the...
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
: 348079 (view as bug list)
Depends on: 332931
Blocks:
  Show dependency treegraph
 
Reported: 2013-11-03 13:59 UTC by Christoph Holtermann
Modified: 2015-11-28 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Holtermann 2013-11-03 13:59:09 UTC
When disabling kwallet in system settings while kwalletmanager is running the latter gets disfunctional

Reproducible: Always

Steps to Reproduce:
1. Run kwalletmanager
2. Disable kwallet in system settings
3. Try to close kwalletmanager
Actual Results:  
Does not react

Expected Results:  
Ending the application
Comment 1 Christoph Holtermann 2013-11-03 14:04:52 UTC
When I retry now I see the system works normally ->

Additional information:

This only happens when the situation described in https://bugs.kde.org/show_bug.cgi?id=266228 happens.
Comment 2 Christoph Holtermann 2013-11-05 10:18:55 UTC
Error messages repeating in shell:

kwalletmanager(4953)/kdeui (Wallet): Couldn't start kwalletd:  "KDEInit kann „/usr/bin/kwalletd“ nicht starten"
Comment 3 Valentin Rusu 2014-04-01 21:40:01 UTC
(In reply to comment #2)
> Error messages repeating in shell:
> 
> kwalletmanager(4953)/kdeui (Wallet): Couldn't start kwalletd:  "KDEInit kann
> „/usr/bin/kwalletd“ nicht starten"

That's by design, AFAICT looking at the source files. If kwallet is disabled in system settings, the kwalletd immediately quits upon start, as it sees that "disable" flag in it's configuration files. The problem is that kwallet API (kwallet.h) does not check this condition also. I think the kdelibs should be fixed by correctly recognizing this situation and by displaying an appropriate error message. I'll take care of this.
Comment 4 Wolfgang Bauer 2015-08-29 00:48:29 UTC
*** Bug 348079 has been marked as a duplicate of this bug. ***
Comment 5 Rex Dieter 2015-11-20 01:10:02 UTC
This is an important issue on plasma5, since the only UI provided to enable/disable kde4 kwallet is kwalletmanager (last kde4 version from 15.04 branch).
Comment 6 Valentin Rusu 2015-11-28 16:00:54 UTC
Well, for some unkown reason, the configurator do not change the correct configuration file! Now fixing this.
Comment 7 Valentin Rusu 2015-11-28 16:09:26 UTC
(In reply to Valentin Rusu from comment #6)
> Well, for some unkown reason, the configurator do not change the correct
> configuration file! Now fixing this.

OK, I got caught by the security checks. For some reason my setup is broken so no problem here.
Comment 8 Valentin Rusu 2015-11-28 16:17:49 UTC
This will make kwalletd exit when user deactivates the wallet:
http://commits.kde.org/kwallet/3e437fdc743f8855bd047afb780059d68580776e