Also stop kwalletd5 when disabling the KWallet system

BUG:327086

The kwalletd should be systematically the change to reconfigure when settings
change. That would also allow it to quit if user deactivates the Wallet.